# hpcengineering

./: env.sh  load_modules.txt
Advanced Methods for Scientific Computing/: compile.sh  test-installation
Advanced Methods for Scientific Computing/00_sc_environments/: covered_code.txt
Advanced Methods for Scientific Computing/01_intro_to_cpp/: README.md
Computational Statistics/: 00 - Introduction to Python (trace).ipynb  00_intro_python.ipynb  01 - Python exercises.ipynb  01_python_ex.ipynb  02_sampling1.ipynb  03_sampling2.ipynb  04_random_fields.ipynb  05_monte_carlo.ipynb  pyproject.toml
Numerical Linear Algebra/: compile.sh  compile_mpi.sh
Numerical Linear Algebra/01_eigen/: Lab1b_IntroEigen.md  example1.cpp  example2  matrix_example2.cpp  process_image  process_image.cpp
Numerical Linear Algebra/01_intro_eigen/: example1  matrix_example1  matrix_example3.cpp  notebook.md
Numerical Linear Algebra/02_linearsystems/: Lab2_SolversEigen.md  example_mtx2.cpp  mhd416_mod.mtx  notebook.md  rhs.mtx  solver_ex1  solver_matrices.cpp
Numerical Linear Algebra/03_eigen_cg_sparse/: exercise  exercise_bicgstab  exercise_bicgstab.cpp  exercise_cg.cpp  main  main.cpp  notebook.md
Numerical Linear Algebra/04_lis/: notebook.md  test4  test4.c  test4_mod
Numerical Linear Algebra/05_more_Lis/: Lab4_IterSolPrecond.md
Numerical Linear Algebra/06_preconditioner/: Atest.mtx  hist.txt  notebook.md  sol.txt
Numerical Linear Algebra/07_eigensolvers/: Lab6_EigenSolvers.md
Numerical Linear Algebra/08_decomposition/: exercise7_1  exercise7_1.cpp  exercise7_2.cpp  (+3 more)
(+35 files in other folders)
