[project]
name = "comp-statistics"
version = "0.1.0"
description = ""
authors = [
    {name = "lordPachy",email = "francescocalzona03@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel (>=7.0.0,<8.0.0)",
    "numpy (>=2.3.3,<3.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "scipy (>=1.16.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
